--- a/public/locales/az.json
+++ b/public/locales/az.json
@@ -43,5 +43,5 @@
   "goToLink": "Keçid et",
   "aboutMe": "Mən Fərid Zeynalzadə, Azərbaycan Texniki Universitetinin məzunuyam. 2024-cü ilin iyun ayından etibarən frontend sahəsində inkişaf etməyə başlamışam. Bu yolda mənə əsas bilikləri qazandıran və istiqamət göstərən müəllimim <1>Elgün Məmmədli</1> olub. Öyrənmə prosesimi yalnız kursla məhdudlaşdırmamış, self-study vasitəsilə öz üzərimdə daim çalışaraq biliklərimi genişləndirmişəm. Təcrübəmi \"MyMentor Internship and Development Agency\"-də keçmişəm. Orada bir neçə kiçik və bir böyük komanda layihəsində iştirak etmişəm. Bu layihələr mənə real iş mühiti, komanda işi və layihə idarəçiliyi sahəsində mühüm təcrübə qazandırıb. Hazırda frontend texnologiyalarında biliklərimi daha da dərinləşdirir və istifadəçi yönümlü, funksional veb interfeyslər yaratmaq üçün daim öyrənməyə davam edirəm.",
   "uploadCV": "CV yükləmək üçün kliklə",
-  "loadMore": "Daha çoxunu göstə..r"
+  "loadMore": "Daha çoxunu göstər.."
 }
