--- a/public/locales/cz.json
+++ b/public/locales/cz.json
@@ -44,7 +44,7 @@
     }
   },
   "goToLink": "Přejít na odkaz",
-  "aboutMe": "Jsem Farid Zeynalzade, absolvent Ázerbájdžánské Technické Univerzity. Od června 2024 se věnuji rozvoji v oblasti frontendového vývoje. Můj mentor <1>Elgun Mammadli</1> mi poskytl základní znalosti a směr v tomto oboru. Své vzdělávání jsem neomezil pouze na kurz, ale neustále jsem pracoval na sobě prostřednictvím samostudia. Stáž jsem absolvoval v agentuře \"MyMentor Internship and Development Agency\", kde jsem se zúčastnil několika malých a jednoho většího týmového projektu. Tyto projekty mi přinesly důležité zkušenosti s reálným pracovním prostředím, týmovou spoluprací a řízením projektů. V současné době se dále ponořuji do frontendových technologií a neustále se učím, jak vytvářet uživatelsky přívětivá a funkční webová rozhraní.",
+  "aboutMe": "Jsem Farid Zeynalzade, absolvent Ázerbájdžánské Technické Univerzity. V současné době bydlím v Praze a mám trvalý pobyt. Od června 2024 se věnuji rozvoji v oblasti frontendového vývoje. Můj mentor <1>Elgun Mammadli</1> mi poskytl základní znalosti a směr v tomto oboru. Své vzdělávání jsem neomezil pouze na kurz, ale neustále jsem pracoval na sobě prostřednictvím samostudia. Stáž jsem absolvoval v agentuře \"MyMentor Internship and Development Agency\", kde jsem se zúčastnil několika malých a jednoho většího týmového projektu. Tyto projekty mi přinesly důležité zkušenosti s reálným pracovním prostředím, týmovou spoluprací a řízením projektů. V současné době se dále ponořuji do frontendových technologií a neustále se učím, jak vytvářet uživatelsky přívětivá a funkční webová rozhraní.",
   "uploadCV": "Klikněte pro nahrání životopisu",
   "loadMore": "Zobrazit více.."
 }
